Various cleanups in operator-common
- Fixed Java warnings
- Fixed typos

Signed-off-by: Mickael Maison <mickael.maison@gmail.com>